testdata/baselines/reference/submodule/compiler/contextuallyTypedParametersOptionalInJSDoc.errors.txt
index.js(11,12): error TS2304: Cannot find name 'Fn'.
index.js(16,17): error TS7006: Parameter 'a' implicitly has an 'any' type.
index.js(16,20): error TS7006: Parameter 'b' implicitly has an 'any' type.
index.js(18,5): error TS2554: Expected 2 arguments, but got 1.
index.js(22,12): error TS2304: Cannot find name 'Fn'.
index.js(27,17): error TS7006: Parameter 'a' implicitly has an 'any' type.
index.js(29,5): error TS2554: Expected 2 arguments, but got 1.
index.js(30,14): error TS2345: Argument of type 'undefined' is not assignable to parameter of type 'number'.


==== index.js (8 errors) ====
    /**
     * 
     * @param {number} num 
     */
    function acceptNum(num) {}
    
    /**
     * @typedef {(a: string, b: number) => void} Fn
     */
    
    /** @type {Fn} */
               ~~
!!! error TS2304: Cannot find name 'Fn'.
    const fn1 =
      /**
       * @param [b]
       */
      function self(a, b) {
                    ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                       ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
        acceptNum(b); // error
        self("");
        ~~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 index.js:16:20: An argument for 'b' was not provided.
        self("", undefined);
      };
    
    /** @type {Fn} */
               ~~
!!! error TS2304: Cannot find name 'Fn'.
    const fn2 =
      /**
       * @param {number} [b]
       */
      function self(a, b) {
                    ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
        acceptNum(b); // error
        self("");
        ~~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 index.js:27:20: An argument for 'b' was not provided.
        self("", undefined);
                 ~~~~~~~~~
!!! error TS2345: Argument of type 'undefined' is not assignable to parameter of type 'number'.
      };
    